2018-06-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: remove sjisterminal (w32 only).

2018-06-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmfmp.c: Allow non-ascii file names for pdfTeX
	with UTF-8 source files (w32 only).

2018-06-09  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmfmp.c, openclose.c: Support UTF-8 file names
	on UTF-8 locale in pTeX (Unix-like platform only).

2018-05-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Discard the changes for pdfTeX on 2018-05-11,
	since 'command_line_encoding=utf-8' is not so natural
	for pdfTeX (w32 only).

2018-05-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Allow non-ascii file names for pdfTeX (w32 only).
	Changes on 2018-05-11 were incomplete.

2018-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Allow non-ascii file names for pdfTeX (w32 only).

2018-03-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Remove support of short 8.3 names (w32 only).

2018-01-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* printversion.c: 2017 ---> 2018.

2017-10-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* openclose.c: If opened fname is a directory in
	output_directory, discard it in Unix platforms.
	Report from Duncan Steele,
	http://tug.org/pipermail/tex-live/2017-October/040731.html
	
	In Windows, fopen (fname, mode) is always NULL, in the case
	where fname is a directory, thus it is discarded automatically.
	Thanks to Hironobu Yamashita,
	http://tug.org/pipermail/tex-live/2017-October/040735.html

2017-09-05  Karl Berry  <karl@tug.org>
        and Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c (IS_SPC_OR_EOL): new macro.
	(topenin): use it, instead of ISBLANK.
	(parse_first_line): doc fix.
	(input_line): remove only trailing space characters
	instead of using ISBLANK.
	See also analogous change in xetexdir/XeTeX_ext.c.
	Original bug report from Evan Aad,
	http://tug.org/pipermail/tex-k/2017-August/002801.html
